--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "highcharts": "^12.4.0",
-        "preline": "^2.4.1"
+        "highcharts": "^12.4.0"
     }
 }
