--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "blade-ui-kit/blade-icons": "^1.8",
         "elasticsearch/elasticsearch": "^9.2",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.7",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
